Adjusted styling for active TopoPets, corrected 2 functions and improved readability of comments
TopoPets.html
* removed link to functions toggleActiveTopoPet1..5Text() since this is
now done with another function (setActiveTopoPetsText(topoPetsGame,
topoPetName) from js\TopoPetsGame.js)

stylesheet_TopoPets.css
* adjusted background-color for active TopoPet entries

js\StartGame.js
* improved readability of comments

js\TopoPetsGame.js
* improved readability of comments
* added styling for the active TopoPet entries to the
setActiveTopoPetsText(topoPetsGame, topoPetName) function

js\Battle.js
* improved readability of comments

js\Player.js
* improved readability of comments

js\Story.js
* improved readability of comments

js\TopoPets.js
* improved readability of comments
* refactored 2 functions to make them work properly:
* * getTopoPetTextColor(name)
* * getTopoPetBackgroundColor(name)

js\TopoPetsCaught
* improved readability of comments
* added explanatory comment

--- a/stylesheet_TopoPets.css
+++ b/stylesheet_TopoPets.css
@@ -375,7 +375,7 @@ body {
 	display: none;
 	cursor: pointer;
 	color: #fa8ecf;
-	background-color: white;
+	background-color: #fcd3e6;
 }
 
 #FIREMANDER {
@@ -466,14 +466,14 @@ body {
 	display: none;
 	cursor: pointer;
 	color: #fa8ecf;
-	background-color: white;
+	background-color: #fcd3e6;
 }
 
 #TUSCAT {
 	display: none;
 	cursor: pointer;
 	color: #fa8ecf;
-	background-color: white;
+	background-color: #fcd3e6;
 }
 
 #VAMPYRE {
@@ -624,7 +624,7 @@ body {
 	cursor: pointer;
 	font-size: 1.2em;
 	color: #fa8ecf;
-	background-color: white;
+	background-color: #fcd3e6;
 	border-radius: 2px;
 }
 
@@ -1339,7 +1339,7 @@ body {
 	cursor: pointer;
 	font-size: 1.2em;
 	color: #fa8ecf;
-	background-color: white;
+	background-color: #fcd3e6;
 	border-radius: 2px;
 }
 
@@ -1394,7 +1394,7 @@ body {
 	cursor: pointer;
 	font-size: 1.2em;
 	color: #fa8ecf;
-	background-color: white;
+	background-color: #fcd3e6;
 	border-radius: 2px;
 }
 
